# cargo-makedocs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: main.rs
