[package]
name = "cargo-makedocs"
version = "1.2.0"
authors = ["Bunogi <haakon.jordet@gmail.com>"]
edition = "2018"

description = "A cargo doc wrapper that only builds the documentation you care about"
repository = "https://github.com/Bunogi/cargo-makedocs"
readme = "README.md"
keywords = ["documentation", "cli", "build"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
license = "MIT"

[dependencies]
clap = "2.32.0"
toml = "0.5.0"
serde_derive = "1.0.80"
serde = "1.0.80"
semver = "0.9.0"
